feat: make single instance socket thread a platform instead of virtual thread